# pycounts_az1990

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycounts_az1990/: __init__.py
tests/: test_pycounts_az1990.py
